fixed z-index order; map was infront of modal

--- a/manager_dashboard/manager_dashboard/css/mapswipe.css
+++ b/manager_dashboard/manager_dashboard/css/mapswipe.css
@@ -132,7 +132,7 @@
 	color:#fff;
 }
 
-#geometryMap { height: 300px; width: 100%}
+#geometryMap { height: 300px; width: 100%; z-index: 0;}
 #geometryChangeDetectionMap { height: 300px; width: 100%}
 #geometryCompletenessMap { height: 300px; width: 100%}
 
